# greweco_rwa

./: .gitignore  Anchor.toml  Makefile  package.json
app/: package-lock.json  package.json
app/app/: layout.tsx  page.tsx
app/components/: WalletContextProvider.tsx
app/utils/: anchorClient.ts  greweco_rwa.json
migrations/: deploy.ts
programs/greweco_rwa/: Cargo.toml  greweco_rwa-keypair.json
programs/greweco_rwa/src/: lib.rs
programs/greweco_rwa/tests/: test_initialize.rs
